refactor and add crossorigin img

--- a/angular.json
+++ b/angular.json
@@ -68,10 +68,14 @@
               "buildTarget": "angular-openai:build:production"
             },
             "development": {
-              "buildTarget": "angular-openai:build:development"
+              "buildTarget": "angular-openai:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
